--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter|Poppins&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap">
 </head>
 <body>
 <nav class="topnav">
     <img class="logo" src="riflogo.png" width="150px" height="90px">
+    <div class="menu">
    <a href="#matseðlar">Matseðlar</a>
     <a href="#takeaway">Take away</a>
     <a href="#gjafabréf">Gjafabréf</a>
     <a href="#umokkur">Um okkur</a> 
+    </div>
     <div class="socialmedia">
-    <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
-    <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
+        <i class="fa-brands fa-facebook-f" style="color: #ffffff;"></i>
+        <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
     </div>
 </nav>
-<img src="mynd1.jpeg">
+<img src="mynd1.jpeg" class="front">
 </body>
 </html>
